...

    var body: some View {
        AppleAuthorizationControl(isEnabled: isEnabled,
                                  style: colorScheme == .dark ? .white : .black, action: action)
            .id(colorScheme)
            .frame(minHeight: minimumHeight)
            .accessibilityIdentifier("settings.relayAccount.signIn")
    }

    private var minimumHeight: CGFloat {
        #if os(tvOS)
        66
        #else
...
